--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
+@import "normalize.css";
+
 body {
-	height:100%;
 	margin:0;padding:0;
 	overflow:hidden;
 	max-width: 1900px;
@@ -29,15 +30,6 @@ body {
 		background-color:#ddd;
 	}	
 
-	.bg_art{
-		position: absolute;
-		display: block;
-		width: 100%;
-	}
-
-	
-	
-	
 	.content {
 		width:100%;
 		height:100%;
@@ -85,45 +77,7 @@ body {
 		font-weight:700;
 	}
 
-	#item5{
-		background-image: url(../images/hurricanes_bg.jpg);
-		background-position: top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
 
-	#item3{
-		background-image: url(../images/main_bg.jpg);
-		background-position: bottom;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
-
-	#item4{
-		background-image: url(../images/dolphins_bg.jpg);
-		background-position: bottom;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
-
-	#item2{
-		background-image: url(../images/marlins_bg.jpg);
-		background-position: bottom;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
-
-	#item1{
-		background-image: url(../images/heat_bg.jpg);
-		background-position: top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
 
 	.main_logo {
 		padding-top: 8%;
@@ -140,12 +94,6 @@ body {
 	.hide_me{
 		display: none;
 	}
-
-	/*----Media Query----*/
-
-	@media screen and (min-width: 768px) and (max-device-width: 1900px) {}
-
-	@media screen and (max-device-width: 1024px) {
 
 		#item5{
 		background-image: url(../images/hurricanes_bg.jpg);
@@ -165,19 +113,13 @@ body {
 
 	#item4{
 		background-image: url(../images/dolphins_bg.jpg);
-		background-position: top;
+		background-position: bottom;
 		background-repeat: no-repeat;
 		background-color: black;
 		background-size: 100%;
 	}
 
-	#item2{
-		background-image: url(../images/marlins_bg.jpg);
-		background-position: top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+
 
 	#item1{
 		background-image: url(../images/heat_bg.jpg);
@@ -187,4 +129,66 @@ body {
 		background-size: 100%;
 	}
 
+		#item2{
+		background-image: url(../images/marlins_bg.jpg);
+		background-position: bottom;
+		background-repeat: no-repeat;
+		background-color: black;
+		background-size: 100%;
+	}
+
+
+
+	@media all and (max-width:1400px){
+
+			#item5{
+		background-image: url(../images/hurricanes_bg.jpg);
+		background-position: center top;
+		background-repeat: no-repeat;
+		background-color: black;
+		background-size: 100%;
+	}
+
+	#item3{
+		background-image: url(../images/main_bg.jpg);
+		background-position: center top;
+		background-repeat: no-repeat;
+		background-color: black;
+		background-size: 100%;
+	}
+
+	#item4{
+		background-image: url(../images/dolphins_bg.jpg);
+		background-position:bottom;
+		background-repeat: no-repeat;
+		background-color: black;
+		background-size: 100%;
+	}
+
+	#item2{
+		background-image: url(../images/marlins_bg.jpg);
+		background-position:bottom;
+		background-repeat: no-repeat;
+		background-color: black;
+		background-size: 100%;
+	}
+
+	#item1{
+		background-image: url(../images/heat_bg.jpg);
+		background-position: center top;
+		background-repeat: no-repeat;
+		background-color: black;
+		background-size: 100%;
+	}
+	}
+
+	@media all and (max-width:1024px)   {
+
+	#item4{
+		background-position: top;
+	}
+
+	#item2{
+		background-position:top;	
+	}
 	}
