--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,70 @@ body {
 	max-width: 1900px;
 }
 
+#followTab {
+ 
+  position: fixed;
+  z-index: 1;
+  right: 0;
+  top: 130px;
+  width: 24px;
+  list-style: none;
+  }
+
+#followTab a:hover{
+	opacity: 0.9;
+}
+
+.rss_feed{
+	margin-top: -10px;
+	border:5px solid black;
+	background-color: white;
+	background-image: url(../images/grunge_2x.png);
+	background-repeat:repeat;
+	background-size: 500px;
+	padding-right: 40px;
+}
+
+.rss_feed img{
+	display: none;
+	width:100%;
+	height: 100%;
+	margin:0 auto;
+}
+
+.hurricanes_schedule{
+	background-color: white;
+	border: 5px solid black;
+	width: 100%;
+}
+
+.tablehead{
+	width: 100%;
+	border:5px solid black;
+	background-color: white;
+}
+
+.tablehead2{
+	margin-top: -100px;
+	width: 100%;
+	border:5px solid black;
+	background-color: white;
+}
+
+#heat-schedule{
+	max-width: 521px;
+	margin: 0 auto;
+	display: block;
+	border:5px solid black;
+}
+
+#marlins-schedule{
+	max-width: 100%;
+	margin: 0 auto;
+	display: block;
+	border:5px solid black;
+}
+
 #wrapper {
 	width:100%;
 	height:100%;
@@ -15,208 +79,341 @@ body {
 	overflow:hidden;
 }
 
-#slider-1-wrapper{
-	margin-top: 10%;
-	margin-left: 40%
+.mod-container{
+	padding-top: -30px;
 }
 
-#slider-2-wrapper{
-	margin-top: 10%;
-	margin-left: 40%
+#slider-1-wrapper,#slider-2-wrapper,#slider-3-wrapper,#slider-4-wrapper,#slider-5-wrapper{
+	margin-top: 8.5%;
+	float:right;
+	margin-right: 3%;
+	height: 75%;
+	margin-bottom: 0px;
+	overflow-x: hidden;
+	background-color: black;
 }
 
-#slider-3-wrapper{
-	margin-top: 10%;
-	margin-left: 40%
+#slider-1-wrapper h2,#slider-2-wrapper h2,#slider-3-wrapper h2,#slider-4-wrapper h2,#slider-5-wrapper h2{
+	display: block;
+	background:url(../images/pinstripe_2x.png);
+   background-repeat: repeat;
+   background-size: 200px;
+	vertical-align: middle;
+	color: white;
+	margin-top: 5px;
+	padding-left: 10px;
+	padding-top: 0px;
+	padding-bottom: 0px;
+	font-size: 30px;
+	margin-bottom: 15px;
 }
 
-#slider-4-wrapper{
-	margin-top: 10%;
-	margin-left: 40%
+
+#mask {
+	width:100%;
+	height:500%;
+	overflow:hidden;
+	background-color:#eee;
 }
 
-#slider-5-wrapper{
-	margin-top: 10%;
-	margin-left: 40%
-}
+.item {
+	width:100%;
+	height:20%;
+	display:block;
+	background-color:#ddd;
+}	
 
-	#mask {
-		width:100%;
-		height:500%;
-		overflow:hidden;
-		background-color:#eee;
-	}
-
-	.item {
-		width:100%;
-		height:20%;
-		display:block;
-		background-color:#ddd;
-	}	
-
-	.content {
-		width:100%;
-		height:100%;
-		margin:0 auto;
-		
-		position:relative;
-	}
-
-	.page_nav{
-		display: block;
-		position: absolute;
-		width: 100%;
-		margin-top:10px;
-		background-color: rgba(0,0,0,0.6);
-		margin-left: -40px;
-
-	}
-
-	.page_nav li{
-		float: left;
-		display: inline-block;
-		width: 20%;
-		text-transform:uppercase;
-		font-size: 20px;
-		text-align: center;
-	}
-
-	.page_nav li a:link{
-		text-decoration: none;
-	}
-
-	.page_nav li a:visited{
-		
-	}
-
-	.page_nav li a:active{
-		color: yellow;
-	}
-
-	.page_nav li a:hover{
-		opacity: 0.5;
-	}
+.content {
+	width:100%;
+	height:100%;
+	margin:0 auto;
 	
-	.selected {
-		font-weight:700;
-	}
+	position:relative;
+}
+
+.page_nav{
+	display: block;
+	position: absolute;
+	width: 100%;
+	margin-top:10px;
+	background-color: rgba(0,0,0,0.6);
+	margin-left: -40px;
+
+}
+
+.page_nav li{
+	float: left;
+	display: inline-block;
+	width: 20%;
+	text-transform:uppercase;
+	font-size: 20px;
+	text-align: center;
+}
+
+.page_nav li a:link{
+	text-decoration: none;
+}
+
+.page_nav li a:visited{
+	
+}
+
+.page_nav li a:active{
+	color: yellow;
+}
+
+.page_nav li a:hover{
+	opacity: 0.5;
+}
+
+.selected {
+	font-weight:700;
+}
 
 
 
-	.main_logo {
-		padding-top: 8%;
-		width: 100%;
+.main_logo {
+	padding-top: 8%;
+	width: 100%;
 
-	}
+}
 
-	.team_logo{
-		width:40%;
-	}
+.team_logo{
+	width:40%;
+}
 
 
 
-	.hide_me{
-		display: none;
-	}
+.hide_me{
+	display: none;
+}
+
+	#item5{
+	background-image: url(../images/hurricanes_bg.jpg);
+	background-position: top;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+	position: relative;
+}
+
+#item3{
+	background-image: url(../images/main_bg.jpg);
+	background-position: top;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+	position: relative;
+}
+
+#item4{
+	background-image: url(../images/dolphins_bg.jpg);
+	background-position: bottom;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+	position: relative;
+}
+
+
+
+#item1{
+	background-image: url(../images/heat_bg.jpg);
+	background-position: top;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+	position: relative;
+
+}
+
+.heat_player{
+	position: absolute;
+	bottom: 0px;
+	width:470px;
+	left: 5%;
+}
+
+.dolphin_player{
+	display: block;
+	position: absolute;
+	bottom: 0px;
+	width:650px;
+	left: 0;
+}
+
+.marlin_player{
+	display: block;
+	position: absolute;
+	bottom: 0px;
+	width:400px;
+	left: 5%;
+}
+
+.headline span { 
+   color: white; 
+   font: bold 42px/45px 'Titillium Web',Helvetica, Sans-Serif; 
+   letter-spacing: -1px;  
+   
+   background:url(../images/pinstripe_2x.png);
+   background-repeat: repeat;
+   background-size: 200px;
+   padding: 5px; 
+}
+
+
+
+.headline { 
+   position: absolute;
+   top: 150px; 
+   left: 0; 
+   width: 100%; 
+}
+
+
+
+#item2{
+background-image: url(../images/marlins_bg.jpg);
+background-position: bottom;
+background-repeat: no-repeat;
+background-color: black;
+background-size: 100%;
+}
+
+.clear{
+clear: both;
+}
+
+
+
+@media all and (max-width:1400px){
 
 		#item5{
-		background-image: url(../images/hurricanes_bg.jpg);
-		background-position: top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+	background-image: url(../images/hurricanes_bg.jpg);
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+}
 
-	#item3{
-		background-image: url(../images/main_bg.jpg);
-		background-position: top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+#item3{
+	background-image: url(../images/main_bg.jpg);
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+}
 
-	#item4{
-		background-image: url(../images/dolphins_bg.jpg);
-		background-position: bottom;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+#item4{
+	background-image: url(../images/dolphins_bg.jpg);
+	background-position:bottom;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+}
+
+#item2{
+	background-image: url(../images/marlins_bg.jpg);
+	background-position:bottom;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+}
+
+#item1{
+	background-image: url(../images/heat_bg.jpg);
+	background-position: center top;
+	background-repeat: no-repeat;
+	background-color: black;
+	background-size: 100%;
+}
 
 
+}
 
-	#item1{
-		background-image: url(../images/heat_bg.jpg);
-		background-position: top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+@media all and (max-width:1024px)   {
 
-		#item2{
-		background-image: url(../images/marlins_bg.jpg);
-		background-position: bottom;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+.heat_player {
+	display: none;
+}
 
-	.clear{
-	clear: both;
+.dolphin_player {
+	display: none;
+}
+
+.marlin_player {
+	display:none;
+}
+
+#item4{
+	background-position: top;
+}
+
+#item2{
+	background-position:top;	
+}
+
+#slider-1-wrapper,#slider-2-wrapper,#slider-3-wrapper,#slider-4-wrapper,#slider-5-wrapper{
+	float:left;
+	margin-left: 16%;
+}
+
+.headline span {
+	display: none;
+}
+
+
+}
+
+@media all and (max-width: 768px){
+
+#slider-1-wrapper,#slider-2-wrapper,#slider-3-wrapper,#slider-4-wrapper,#slider-5-wrapper{
+	float:none;
+	margin-left: 0px;
+	margin-right: 0px;
+	height: 90%;
+	margin:0 auto;
+	width: 90%;
+	margin-top: 70px;
+
+}
+
+.heat_player {
+	display: none;
+}
+
+.dolphin_player {
+	display: none;
+}
+
+.marlin_player {
+	display:none;
 }
 
 
 
-	@media all and (max-width:1400px){
 
-			#item5{
-		background-image: url(../images/hurricanes_bg.jpg);
-		background-position: center top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
 
-	#item3{
-		background-image: url(../images/main_bg.jpg);
-		background-position: center top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+}
 
-	#item4{
-		background-image: url(../images/dolphins_bg.jpg);
-		background-position:bottom;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+@media all and (max-width: 480px){
 
-	#item2{
-		background-image: url(../images/marlins_bg.jpg);
-		background-position:bottom;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
+#slider-1-wrapper, #slider-2-wrapper, #slider-3-wrapper, #slider-4-wrapper, #slider-5-wrapper{
+	height: 75%;
+	margin-top: 50px;
+}
 
-	#item1{
-		background-image: url(../images/heat_bg.jpg);
-		background-position: center top;
-		background-repeat: no-repeat;
-		background-color: black;
-		background-size: 100%;
-	}
-	}
+.heat_player {
+	display: none;
+}
 
-	@media all and (max-width:1024px)   {
+.dolphin_player {
+	display: none;
+}
 
-	#item4{
-		background-position: top;
-	}
+.marlin_player {
+	display:none;
+}
+	
+}
 
-	#item2{
-		background-position:top;	
-	}
-	}
